--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,505 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/cokkie.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="./images/Bakerlab.png"
+            alt="logo"
+          />
+        </a>
+
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+
+        <nav class="nav nav--desktop">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#products"
+              >
+                Products
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#blog"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="nav__item nav__item--contact">
+              <a
+                href="#contact-us"
+                class="icon icon--phone"
+              ></a>
+              <a
+                class="nav__link nav__link--contact"
+                href="#contact-us"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="container">
+        <p class="header__about">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <div class="header__content">
+          <div class="header__img-container">
+            <h1 class="header__title">Creative bakery</h1>
+            <img
+              class="header__img"
+              src="./images/cokkie.png"
+              alt="cake"
+            />
+          </div>
+
+          <a
+            href="#about-us"
+            class="header__button"
+          >
+            <span class="icon icon--button"></span>
+            <span class="header__button--text">Learn more</span>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="./images/Bakerlab.png"
+            alt="logo"
+          />
+        </a>
+
+        <a
+          href="#"
+          class="icon icon--close"
+        ></a>
+      </div>
+
+      <nav class="nav nav--mobile">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#blog"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="nav__item nav__item--contact">
+            <a
+              href="#contact-us"
+              class="icon icon--phone"
+            ></a>
+            <a
+              class="nav__link nav__link--contact"
+              href="#contact-us"
+            >
+              Contact us
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+
+    <main class="main">
+      <section
+        class="products"
+        id="products"
+      >
+        <div class="container">
+          <h2 class="section-title">What we bake</h2>
+          <p class="products__about">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+
+          <div class="products__cards">
+            <article class="product">
+              <img
+                src="./images/photo-product-01.png"
+                alt="cokkie1"
+                class="product__photo"
+              />
+              <h3 class="product__title">Cakes</h3>
+              <p class="product__about">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+
+            <article class="product">
+              <img
+                src="./images/photo-product-02.png"
+                alt="cokkie2"
+                class="product__photo"
+              />
+              <h3 class="product__title">Cakes</h3>
+              <p class="product__about">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+
+            <article class="product">
+              <img
+                src="./images/photo-product-03.png"
+                alt="cokkie3"
+                class="product__photo"
+              />
+              <h3 class="product__title">Donuts</h3>
+              <p class="product__about">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+
+            <article class="product">
+              <img
+                src="./images/photo-product-04.png"
+                alt="cokkie4"
+                class="product__photo"
+              />
+              <h3 class="product__title">Donuts</h3>
+              <p class="product__about">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+
+            <article class="product">
+              <img
+                src="./images/photo-product-05.png"
+                alt="cokkie5"
+                class="product__photo"
+              />
+              <h3 class="product__title">Cakes</h3>
+              <p class="product__about">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+
+            <article class="product">
+              <img
+                src="./images/photo-product-06.png"
+                alt="cokkie4"
+                class="product__photo"
+              />
+              <h3 class="product__title">Cookies</h3>
+              <p class="product__about">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                class="product__button"
+                href="#contact-us"
+              >
+                <span class="icon icon--product"></span>
+                <span class="product__button--text">Order</span>
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="about"
+        id="about-us"
+      >
+        <div class="container">
+          <div class="about__content">
+            <div class="about__info">
+              <h2 class="about__title section-title">Few words About us</h2>
+
+              <p class="about__text">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+            </div>
+
+            <div class="about__stats stats">
+              <article class="stats__item">
+                <p class="stats__number">2015</p>
+                <p class="stats__label">Foundation year</p>
+              </article>
+
+              <article class="stats__item">
+                <p class="stats__number">23</p>
+                <p class="stats__label">Stores</p>
+              </article>
+
+              <article class="stats__item">
+                <p class="stats__number">155</p>
+                <p class="stats__label">Companies</p>
+              </article>
+
+              <article class="stats__item">
+                <p class="stats__number">10k+</p>
+                <p class="stats__label">Clients</p>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__menu">
+            <a
+              href="#"
+              class="footer__logo"
+            >
+              <img
+                src="./images/Bakerlab white.png"
+                alt="logo"
+              />
+            </a>
+
+            <nav class="nav nav--footer">
+              <h3 class="footer__subtitle">Menu</h3>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#products"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#about-us"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#blog"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#terms"
+                  >
+                    Terms & Privacy
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div
+            class="footer__contacts contacts"
+            id="contact-us"
+          >
+            <h2 class="section-title footer__title">Contact us</h2>
+
+            <h3 class="footer__subtitle">Call us</h3>
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <a
+                  class="contacts__link"
+                  href="tel:(629) 555-0129"
+                >
+                  (629) 555-0129
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a
+                  class="contacts__link"
+                  href="tel:(603) 555-0123"
+                >
+                  (603) 555-0123
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a
+                  class="contacts__link"
+                  href="tel:(704) 555-0127"
+                >
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+
+            <h3 class="footer__subtitle">Email us</h3>
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <a
+                  class="contacts__link"
+                  href="mailto:bakerlab@example.com"
+                >
+                  bakerlab@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__content">
+          <div class="footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a
+                  href="https://facebook.com/bakerlab"
+                  aria-label="Facebook"
+                  class="icon icon--facebook"
+                  target="_blank"
+                ></a>
+              </li>
+              <li class="social__item">
+                <a
+                  href="https://instagram.com/bakerlab"
+                  aria-label="Instagram"
+                  class="icon icon--instagram"
+                  target="_blank"
+                ></a>
+              </li>
+              <li class="social__item">
+                <a
+                  href="https://twitter.com/bakerlab"
+                  aria-label="Twitter"
+                  class="icon icon--twitter"
+                  target="_blank"
+                ></a>
+              </li>
+            </ul>
+          </div>
+
+          <p class="footer__signature">© Bakerlab 2022</p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
