finished project + smooth scroll

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <!-- #region head -->
 
   <head>
@@ -38,7 +41,7 @@
   </head>
 
   <!-- #endregion -->
-  <body class="page">
+  <body class="page__body">
     <!-- #region header -->
 
     <header class="header">
