--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
   </head>
   <body>
     <header class="header">
-      <!-- <div class="container"> -->
       <div class="header__content">
         <div class="top-bar">
           <a
@@ -32,6 +31,69 @@
               class="top-bar__logo"
             />
           </a>
+
+          <a href="#menu" class="burger"></a>
+
+          <a href="#" class="icon icon--close"></a>
+
+          <!-- <input
+            type="checkbox"
+            id="menu-toggle"
+            class="menu-toggle"
+          />
+
+          <label
+            for="menu-toggle"
+            class="burger"
+          ></label> -->
+
+          <aside
+            class="mobile-menu"
+            id="menu"
+          >
+            <div class="mobile-menu__top">
+              <a
+                href="#"
+                class="mobile-menu__logo-link"
+              >
+                <img
+                  src="./images/logo.png"
+                  alt="Logo"
+                  class="mobile-menu__logo"
+                />
+              </a>
+            </div>
+
+            <nav class="mobile-menu__nav">
+              <a
+                href="#products"
+                class="mobile-menu__link"
+              >
+                Products
+              </a>
+
+              <a
+                href="#about"
+                class="mobile-menu__link"
+              >
+                About us
+              </a>
+
+              <a href="#">Blog</a>
+
+              <a
+                href="#contact"
+                class="mobile-menu--contact"
+              >
+                <img
+                  src="./images/icons/Icon-phone.png"
+                  alt="phone icon"
+                  class="menu--contactIcon"
+                />
+                Contact us
+              </a>
+            </nav>
+          </aside>
 
           <div class="top-bar__menu">
             <a
@@ -65,6 +127,7 @@
             </a>
           </div>
         </div>
+
         <div class="header__bottom-wrapper">
           <div class="header__bottom">
             <div class="header__text">
@@ -74,16 +137,23 @@
             </div>
             <div class="header__title">Creative bakery</div>
             <button class="header__button">
-              <img
-                src="./images/icons/Icon-cookie.png"
-                alt="icon cookie"
-              />
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M21.9422 11.9926C19.209 11.9594 17.002 9.73912 17.002 6.99816C14.261 6.99816 12.041 4.79156 12.0074 2.0588C10.9426 1.89708 9.85394 2.07052 8.8934 2.55957L6.19302 3.93533C5.22092 4.43072 4.43068 5.22123 3.93561 6.19349L2.56452 8.88406C2.06798 9.85879 1.89269 10.9657 2.06374 12.0461L2.53562 15.0253C2.7065 16.1047 3.21462 17.1023 3.98717 17.8753L6.12662 20.0143C6.89673 20.7847 7.89098 21.2914 8.96684 21.4619L11.9633 21.9365C13.0379 22.1069 14.1391 21.9322 15.109 21.4381L17.8094 20.0627C18.7814 19.5672 19.5716 18.7768 20.0668 17.8046L21.4379 15.114C21.9285 14.1515 22.1023 13.0602 21.9422 11.9926ZM8.87504 16.3745C8.18481 16.3745 7.62505 15.8148 7.62505 15.1246C7.62505 14.4343 8.18481 13.8746 8.87504 13.8746C9.56527 13.8746 10.125 14.4343 10.125 15.1246C10.125 15.8148 9.56527 16.3745 8.87504 16.3745ZM10.125 10.1247C9.4348 10.1247 8.87504 9.56491 8.87504 8.87468C8.87504 8.18446 9.4348 7.62471 10.125 7.62471C10.8153 7.62471 11.375 8.18446 11.375 8.87468C11.375 9.56491 10.8153 10.1247 10.125 10.1247ZM16.375 15.1246C15.6848 15.1246 15.125 14.5648 15.125 13.8746C15.125 13.1844 15.6848 12.6246 16.375 12.6246C17.0652 12.6246 17.625 13.1844 17.625 13.8746C17.625 14.5648 17.0652 15.1246 16.375 15.1246Z"
+                  fill="currentColor"
+                />
+              </svg>
               Learn more
             </button>
           </div>
         </div>
       </div>
-      <!-- </div> -->
     </header>
 
     <main class="main">
@@ -103,7 +173,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product1.png"
+                      src="./images/products/desktop/product1.png"
                       alt="cake"
                     />
                   </div>
@@ -126,7 +196,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product2.png"
+                      src="./images/products/desktop/product2.png"
                       alt="cake"
                     />
                   </div>
@@ -149,7 +219,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product3.png"
+                      src="./images/products/desktop/product3.png"
                       alt="donut"
                     />
                   </div>
@@ -169,7 +239,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product4.png"
+                      src="./images/products/desktop/product4.png"
                       alt="donut"
                     />
                   </div>
@@ -191,7 +261,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product5.png"
+                      src="./images/products/desktop/product5.png"
                       alt="cake"
                     />
                   </div>
@@ -211,7 +281,7 @@
                 <div class="products__card">
                   <div class="card__top">
                     <img
-                      src="./images/products/product6.png"
+                      src="./images/products/desktop/product6.png"
                       alt="cookies"
                     />
                   </div>
@@ -248,21 +318,25 @@
               </div>
             </div>
             <div class="about__bottom">
-              <div class="statistics">
-                <div class="statistics__number">2015</div>
-                <div class="statistics__content">Foundation year</div>
+              <div class="bottom__first">
+                <div class="statistics">
+                  <div class="statistics__number">2015</div>
+                  <div class="statistics__content">Foundation year</div>
+                </div>
+                <div class="statistics">
+                  <div class="statistics__number">23</div>
+                  <div class="statistics__content">Stores</div>
+                </div>
               </div>
-              <div class="statistics">
-                <div class="statistics__number">23</div>
-                <div class="statistics__content">Stores</div>
-              </div>
-              <div class="statistics">
-                <div class="statistics__number">155</div>
-                <div class="statistics__content">Companies</div>
-              </div>
-              <div class="statistics">
-                <div class="statistics__number">10K+</div>
-                <div class="statistics__content">Clients</div>
+              <div class="bottom__second">
+                <div class="statistics">
+                  <div class="statistics__number">155</div>
+                  <div class="statistics__content">Companies</div>
+                </div>
+                <div class="statistics">
+                  <div class="statistics__number">10K+</div>
+                  <div class="statistics__content">Clients</div>
+                </div>
               </div>
             </div>
           </section>
@@ -272,76 +346,104 @@
 
     <footer class="footer">
       <div class="footer__inner">
-        <section class="nav">
-          <a
-            href="#"
-            class="nav__logo-link"
+        <div class="footer__top">
+          <section class="nav">
+            <a
+              href="#"
+              class="nav__logo-link"
+            >
+              <img
+                src="./images/white_logo.png"
+                alt="Bakerlab logo"
+                class="nav__logo"
+              />
+            </a>
+            <div class="nav__menu">
+              <div class="nav__menu--title">Menu</div>
+              <ul class="nav__menu--list">
+                <li class="nav__menu--item">Products</li>
+                <li class="nav__menu--item">About us</li>
+                <li class="nav__menu--item">Blog</li>
+                <li class="nav__menu--item">Terms & Privacy</li>
+              </ul>
+            </div>
+          </section>
+          <section
+            class="contact"
+            id="contact"
           >
-            <img
-              src="./images/white_logo.png"
-              alt="Bakerlab logo"
-              class="nav__logo"
-            />
-          </a>
-          <div class="nav__menu">
-            <div class="nav__menu--title">Menu</div>
-            <ul class="nav__menu--list">
-              <li class="nav__menu--item">Products</li>
-              <li class="nav__menu--item">About us</li>
-              <li class="nav__menu--item">Blog</li>
-              <li class="nav__menu--item">Terms & Privacy</li>
-            </ul>
-          </div>
+            <p class="contact__title">Contact us</p>
+            <div class="contact__container">
+              <div class="contact__call">
+                <div class="contact__call--name">Call us</div>
+                <ul class="contact__call--list">
+                  <li class="contact__call--phone">(629) 555-0129</li>
+                  <li class="contact__call--phone">(603) 555-0123</li>
+                  <li class="contact__call--phone">(704) 555-0127</li>
+                </ul>
+              </div>
+              <div class="contact__email">
+                <p class="contact__email--name">Email us</p>
+                <p class="contact__email--content">bakerlab@example.com</p>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <section class="social">
           <div class="nav__social">
             <a
               href="#"
               class="nav__social--link"
             >
-              <img
-                src="./images/icons/Icon-facebook.png"
-                alt="facebook"
-                class="nav__social--icon"
-              />
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M14 13.5H16.5L17.5 9.5H14V7.5C14 6.47 14 5.5 16 5.5H17.5V2.14C17.174 2.097 15.943 2 14.643 2C11.928 2 10 3.657 10 6.7V9.5H7V13.5H10V22H14V13.5Z"
+                  fill="currentColor"
+                />
+              </svg>
             </a>
             <a
               href="#"
               class="nav__social--link"
             >
-              <img
-                src="./images/icons/Icon-instagram.png"
-                alt="instagram"
-                class="nav__social--icon"
-              />
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 2C14.717 2 15.056 2.01 16.122 2.06C17.187 2.11 17.912 2.277 18.55 2.525C19.21 2.779 19.766 3.123 20.322 3.678C20.8305 4.1779 21.224 4.78259 21.475 5.45C21.722 6.087 21.89 6.813 21.94 7.878C21.987 8.944 22 9.283 22 12C22 14.717 21.99 15.056 21.94 16.122C21.89 17.187 21.722 17.912 21.475 18.55C21.2247 19.2178 20.8311 19.8226 20.322 20.322C19.822 20.8303 19.2173 21.2238 18.55 21.475C17.913 21.722 17.187 21.89 16.122 21.94C15.056 21.987 14.717 22 12 22C9.283 22 8.944 21.99 7.878 21.94C6.813 21.89 6.088 21.722 5.45 21.475C4.78233 21.2245 4.17753 20.8309 3.678 20.322C3.16941 19.8222 2.77593 19.2175 2.525 18.55C2.277 17.913 2.11 17.187 2.06 16.122C2.013 15.056 2 14.717 2 12C2 9.283 2.01 8.944 2.06 7.878C2.11 6.812 2.277 6.088 2.525 5.45C2.77524 4.78218 3.1688 4.17732 3.678 3.678C4.17767 3.16923 4.78243 2.77573 5.45 2.525C6.088 2.277 6.812 2.11 7.878 2.06C8.944 2.013 9.283 2 12 2ZM12 7C10.6739 7 9.40215 7.52678 8.46447 8.46447C7.52678 9.40215 7 10.6739 7 12C7 13.3261 7.52678 14.5979 8.46447 15.5355C9.40215 16.4732 10.6739 17 12 17C13.3261 17 14.5979 16.4732 15.5355 15.5355C16.4732 14.5979 17 13.3261 17 12C17 10.6739 16.4732 9.40215 15.5355 8.46447C14.5979 7.52678 13.3261 7 12 7ZM18.5 6.75C18.5 6.41848 18.3683 6.10054 18.1339 5.86612C17.8995 5.6317 17.5815 5.5 17.25 5.5C16.9185 5.5 16.6005 5.6317 16.3661 5.86612C16.1317 6.10054 16 6.41848 16 6.75C16 7.08152 16.1317 7.39946 16.3661 7.63388C16.6005 7.8683 16.9185 8 17.25 8C17.5815 8 17.8995 7.8683 18.1339 7.63388C18.3683 7.39946 18.5 7.08152 18.5 6.75ZM12 9C12.7956 9 13.5587 9.31607 14.1213 9.87868C14.6839 10.4413 15 11.2044 15 12C15 12.7956 14.6839 13.5587 14.1213 14.1213C13.5587 14.6839 12.7956 15 12 15C11.2044 15 10.4413 14.6839 9.87868 14.1213C9.31607 13.5587 9 12.7956 9 12C9 11.2044 9.31607 10.4413 9.87868 9.87868C10.4413 9.31607 11.2044 9 12 9Z"
+                  fill="currentColor"
+                />
+              </svg>
             </a>
             <a
               href="#"
               class="nav__social--link"
             >
-              <img
-                src="./images/icons/Icon-twitter.png"
-                alt="twitter"
-                class="nav__social--icon"
-              />
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M22.1621 5.65605C21.3986 5.99374 20.589 6.21552 19.7601 6.31405C20.6338 5.79148 21.2878 4.96906 21.6001 4.00005C20.7801 4.48805 19.8811 4.83005 18.9441 5.01505C18.3147 4.34163 17.4804 3.89501 16.571 3.74463C15.6616 3.59425 14.728 3.74854 13.9153 4.1835C13.1026 4.61846 12.4564 5.30973 12.0772 6.14984C11.6979 6.98995 11.6068 7.93183 11.8181 8.82905C10.1552 8.7457 8.52838 8.31357 7.04334 7.56071C5.55829 6.80785 4.24818 5.7511 3.19805 4.45905C2.82634 5.0975 2.63101 5.82328 2.63205 6.56205C2.63205 8.01205 3.37005 9.29305 4.49205 10.043C3.82806 10.0221 3.17869 9.84283 2.59805 9.52005V9.57205C2.59825 10.5377 2.93242 11.4737 3.5439 12.2211C4.15538 12.9686 5.00653 13.4815 5.95305 13.673C5.33667 13.8401 4.69036 13.8647 4.06305 13.745C4.32992 14.5763 4.85006 15.3032 5.55064 15.8242C6.25123 16.3451 7.09718 16.6338 7.97005 16.65C7.10253 17.3314 6.10923 17.835 5.04693 18.1322C3.98464 18.4294 2.87418 18.5143 1.77905 18.382C3.69075 19.6115 5.91615 20.2642 8.18905 20.262C15.8821 20.262 20.0891 13.889 20.0891 8.36205C20.0891 8.18205 20.0841 8.00005 20.0761 7.82205C20.8949 7.23022 21.6017 6.49707 22.1631 5.65705L22.1621 5.65605Z"
+                  fill="currentColor"
+                />
+              </svg>
             </a>
           </div>
-        </section>
-        <section class="contact" id="contact">
-          <p class="contact__title">Contact us</p>
-          <div class="contact__container">
-            <div class="contact__call">
-              <div class="contact__call--name">Call us</div>
-              <ul class="contact__call--list">
-                <li class="contact__call--phone">(629) 555-0129</li>
-                <li class="contact__call--phone">(603) 555-0123</li>
-                <li class="contact__call--phone">(704) 555-0127</li>
-              </ul>
-            </div>
-            <div class="contact__email">
-              <p class="contact__email--name">Email us</p>
-              <p class="contact__email--content">bakerlab@example.com</p>
-            </div>
-          </div>
-
           <div class="content">© Bakerlab 2022</div>
         </section>
       </div>
