--- a/src/index.html
+++ b/src/index.html
@@ -91,9 +91,15 @@
             </nav>
           </aside>
 
-          <a href="#menu" class="burger"></a>
+          <a
+            href="#menu"
+            class="burger"
+          ></a>
 
-          <a href="#" class="icon icon--close"></a>
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
 
           <div class="top-bar__menu">
             <a
@@ -186,10 +192,18 @@
                     href="#"
                     class="card__order"
                   >
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
@@ -206,10 +220,18 @@
                     powder
                   </p>
                   <a class="card__order">
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
@@ -229,10 +251,18 @@
                     almond “petals”
                   </p>
                   <a class="card__order">
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
@@ -248,10 +278,18 @@
                     Light multi-layered croissant strewn with coconut and nuts
                   </p>
                   <a class="card__order">
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
@@ -271,10 +309,18 @@
                     inside
                   </p>
                   <a class="card__order">
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
@@ -291,10 +337,18 @@
                     chocolate chips
                   </p>
                   <a class="card__order">
-                    <img
-                      src="./images/icons/Icon-arrow.png"
-                      alt="arrow"
-                    />
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                        fill="currentColor"
+                      />
+                    </svg>
                     Order
                   </a>
                 </div>
